--- a/masita/src/main/webapp/PerfilPuestoIH.xhtml
+++ b/masita/src/main/webapp/PerfilPuestoIH.xhtml
@@ -78,8 +78,8 @@
                         <h:outputText value="#{comentario.fecha}" />
                     </p:column>
                     <p:column style="width:32px">
-                        +                        <p:rowEditor />
-                        +                    </p:column>
+                                                <p:rowEditor />
+                                            </p:column>
                 </p:dataTable>
             </h:form>
         </b:container>
@@ -95,24 +95,24 @@
                 <p:panel id="panel" header="¿Qué piensas sobre este puesto?" footer="" style="margin-bottom: 10px" closable="true" >
                     <h:outputText/>
                     <br/>
-                    <p:inputTextarea value="#{crearComentario.comentario.contenido}" style="width: 100%" rows="10"/>
+                    <p:inputTextarea value="#{crearComentario.nuevo.contenido}" style="width: 100%" rows="10"/>
                     <br />                    
 
                     <p:commandButton id='btn' value="Comentar" 
-                                     ajax="false" action="#{crearComentario.agregarComentario()}" image="ui-icon-document" style="float:right; font-size:20px"/>
+                                     ajax="false" action="#{crearComentario.crearComentario()}" image="ui-icon-document" style="float:right; font-size:20px"/>
                     <br />
                     <f:metadata>
                         <f:viewParam name="idPuesto" value="#{crearComentario.idPuesto}" />
                     </f:metadata>
-                    <p:rating value="#{crearComentario.calificacion}" stars="5" 
+                    <p:rating value="#{crearComentario.nuevo.calificacion}" stars="5" 
                               cancel="false" onRate="alert('Tu calificaste con: ' + value)" style="float:left; width: 100px; height: 100px">
-                        <p:ajax event="rate" listener="#{crearComentario.nuevaCalificacion}"/>
+                        <p:ajax event="rate" listener="#{crearComentario.calificarPuesto()}"/>
                     </p:rating>
 
                     <h:outputText value="Comentario creado:" />    
 
                     <h:outputText id="display"
-                                  value="#{crearComentario.comentario.contenido}" style="font-weight: bold" />
+                                  value="#{crearComentario.nuevo.contenido}" style="font-weight: bold" />
 
                 </p:panel>
 
