Clases terminadas para mis casos de uso
Ya se peude Eliminar Editar y Agregar puestos

--- a/iteracion/KAAB/masita/src/main/webapp/mapa.xhtml
+++ b/iteracion/KAAB/masita/src/main/webapp/mapa.xhtml
@@ -58,7 +58,7 @@
       }
     }
 
-    /*function markerAddComplete() {
+    function markerAddComplete() {
       var title = document.getElementById('title');
       currentMarker.setTitle(title.value);
       title.value = "";
@@ -73,6 +73,6 @@
       currentMarker = null;
 
       return false;
-    }*/
+    }
   </script>
 </html>
