--- a/masita/src/main/webapp/PerfilPuestoIH.xhtml
+++ b/masita/src/main/webapp/PerfilPuestoIH.xhtml
@@ -22,10 +22,32 @@
 
     <!-- Add 50px padding top to the body for the navbar -->
     <h:body style="padding-top: 50px; padding-bottom: 20px;">
-        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
+        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top" onclick="location='/masita/PrincipalIH.xhtml'">
             <h:form styleClass="navbar-form navbar-right">
-                <b:commandButton action="a" value="Regístrate" look="warning" icon="chevron-right" iconAlign="right"/>
-                <b:commandButton action="a" value="Iniciar Sesión" look="success" icon="chevron-right" iconAlign="right"/>
+                <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='/masita/RegistrarCuenta.jsp'"/>
+                <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
+                    <b:container fluid="true">                        
+                            <b:column>
+                                <h:form styleClass="form-signin" prependId="false">
+                                    <!--<h3 class="form-signin-heading">Por favor inicie sesión</h3>-->
+                                    <b:messages/>
+                                    <b:inputText id="email" placeholder="Correo electrónico" value="#{inicioSesion.usuario.correo}">
+                                        <f:facet name="prepend">
+                                            <b:icon name="user" />
+                                        </f:facet>
+                                    </b:inputText>
+                                    <b:inputText id="password" placeholder="Contraseña" type="password" value="#{inicioSesion.usuario.contrasenia}">
+                                        <f:facet name="prepend">
+                                            <b:iconAwesome name="key"/>
+                                        </f:facet>
+                                    </b:inputText>
+                                    <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
+                                    <b:commandButton look="primary btn-block" value="Iniciar sesión" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
+                                </h:form>
+                            </b:column>                       
+                    </b:container>                
+                </b:dropButton>
+                <b:commandButton value="Cerrar Sesión" look="btn btn-md btn-danger" rendered="#{cierreSesion.mostrarCierreSesion()}" action="#{cierreSesion.cierreSesion()}"/>
             </h:form>
         </b:navBar>
         <b:jumbotron>
