Se creo crear administrador, mapa dirige a puesto.

--- a/masita/src/main/webapp/EliminaPuestoIH.xhtml
+++ b/masita/src/main/webapp/EliminaPuestoIH.xhtml
@@ -46,7 +46,7 @@
         
         <b:jumbotron>
             <b:container>
-                <h3>Eliminar Puestos</h3>
+                <h3>Información Puestos</h3>
                 <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil"/>
             </b:container>
         </b:jumbotron>
@@ -55,7 +55,7 @@
             <h:form id="form">               
                 <p:dataTable id="listaP" var="puesto" value="#{controladorPuesto.crearListaPuesto()}" editable="false" style="margin-bottom:20px">
                     <f:facet name="header">
-                        Eliminar Puestos
+                        Información Puestos
                     </f:facet>
 
                     <p:column headerText="Nombre">
