--- a/masita/src/main/webapp/AgregarPuesto.xhtml
+++ b/masita/src/main/webapp/AgregarPuesto.xhtml
@@ -12,7 +12,10 @@
     </h:head>
      <h:body style="padding-top: 50px; padding-bottom: 20px;" rendered="#{inicioSesion.haySesionAdmin()}" >
         
-         <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top" onclick="location='/masita/PrincipalIH.xhtml'">
+         <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
+            <b:navbarLinks>
+            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
+            </b:navbarLinks>
              <h:form styleClass="navbar-form navbar-right">
                  <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='#{inicioSesion.redireccionBoton()}'"/>
                  <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
