--- a/masita/src/main/webapp/RegistrarCuentaIH.xhtml
+++ b/masita/src/main/webapp/RegistrarCuentaIH.xhtml
@@ -16,7 +16,10 @@ and open the template in the editor.
     <!-- Add 50px padding top to the body for the navbar -->
     <h:body style="padding-top: 50px; padding-bottom: 20px;">
         
-        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top" onclick="location='/masita/PrincipalIH.xhtml'">
+        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
+            <b:navbarLinks>
+            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
+            </b:navbarLinks>
             <h:form styleClass="navbar-form navbar-right">
                 <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='/masita/RegistrarCuentaIH.xhtml'"/>
                 <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
