Se mejora la interfaz de usuario

--- a/masita/src/main/webapp/AgregarPuesto.xhtml
+++ b/masita/src/main/webapp/AgregarPuesto.xhtml
@@ -47,7 +47,7 @@
         <b:jumbotron>
             <b:container>
                 <h3>Agregar Puesto</h3>
-                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil"/>
+                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil" style="font-size:120%" />
             </b:container>
         </b:jumbotron>
         <b:container>
