--- a/masita/src/main/webapp/EliminaPuestoIH.xhtml
+++ b/masita/src/main/webapp/EliminaPuestoIH.xhtml
@@ -50,7 +50,7 @@
         <b:jumbotron>
             <b:container>
                 <h3>Información Puestos</h3>
-                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil"/>
+                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil" style="font-size:120%" />
             </b:container>
         </b:jumbotron>
         <b:container>
