--- a/masita/src/main/webapp/EliminarUsuarioIH.xhtml
+++ b/masita/src/main/webapp/EliminarUsuarioIH.xhtml
@@ -46,8 +46,8 @@
         
         <b:jumbotron>
             <b:container>
+                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil" style="font-size:120%"/>
                 <h3>Desactivar Usuarios</h3>
-                <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil"/>
                 <p>Recuerda que sólo desactivamos a los usuarios para tener un registro de los mismos.</p>
                 <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Activar</p>
                 <p><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Desactivar</p>
