--- a/masita/src/main/webapp/PerfilAdministradorIH.xhtml
+++ b/masita/src/main/webapp/PerfilAdministradorIH.xhtml
@@ -50,13 +50,13 @@ and open the template in the editor.
             <p>Recuerda que si eres Administrador de Masita, debes tener la sesión iniciada. </p>
             <b:container rendered="#{inicioSesion.haySesionAdmin()}">
                 <h3>Tareas del Administrador:</h3>
-                <p:link outcome="EliminarUsuarioIH" value="Eliminar Usuarios" />
+                <p:link outcome="EliminarUsuarioIH" value="Desactivar Usuarios" style="font-size:150%"/>
                 <br/>
-                <p:link outcome="AgregarPuesto" value="Agregar Puestos" />
+                <p:link outcome="AgregarPuesto" value="Agregar Puestos" style="font-size:150%"/>
                 <br/>
-                <p:link outcome="EliminaPuestoIH" value="Eliminar/Editar Puestos" />
+                <p:link outcome="EliminaPuestoIH" value="Eliminar/Editar Puestos" style="font-size:150%"/>
                 <br/>
-                <p:link outcome="EliminarUsuarioIH" value="Crear Administrador" />
+                <p:link outcome="EliminarUsuarioIH" value="Crear Administrador" style="font-size:150%"/>
                 
             </b:container>
         </b:jumbotron>
