--- a/masita/src/main/webapp/AgregarPuesto.xhtml
+++ b/masita/src/main/webapp/AgregarPuesto.xhtml
@@ -8,14 +8,18 @@
     <h:head>
         <title>Masita</title>
         <meta name="author" content="The Author"></meta>
-        <script src="http://maps.google.com/maps/api/js?key=AIzaSyBlEYhBfp104jOYDy-TOhTYkSd8YBtkLFI"></script>
+        <script src="http://maps.google.com/maps/api/js?key=AIzaSyD6Op8UEg9VEX_Oj0eNWNkCEJjr3oVu3WY"></script>
     </h:head>
+    <style>
+        #brand-image{
+            height: 25px;
+        }
+    </style>
      <h:body style="padding-top: 50px; padding-bottom: 20px;" rendered="#{inicioSesion.haySesionAdmin()}" >
-        
-         <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
-            <b:navbarLinks>
-            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
-            </b:navbarLinks>
+         <b:navBar brandHref="#" inverse="true" fixed="top">
+            <a class="navbar-brand" href="/masita/PrincipalIH.xhtml" >
+                <img id="brand-image" alt="Website Logo" src="imagenes/masita.png"/>
+            </a>
              <h:form styleClass="navbar-form navbar-right">
                  <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='#{inicioSesion.redireccionBoton()}'"/>
                  <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
@@ -34,7 +38,6 @@
                                          <b:iconAwesome name="key"/>
                                      </f:facet>
                                  </b:inputText>
-                                 <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
                                  <b:commandButton look="primary btn-block" value="Iniciar sesión" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
                              </h:form>
                          </b:column>                       
