--- a/masita/src/main/webapp/CuentaValidadaIH.xhtml
+++ b/masita/src/main/webapp/CuentaValidadaIH.xhtml
@@ -9,17 +9,21 @@
         <title>Masita</title>
         <meta name="author" content="The Author"></meta>
     </h:head>
+    <style>
+        #brand-image{
+            height: 25px;
+        }
+    </style>
      <f:metadata>
         <f:viewParam name="idUsuario" value="#{altaUsuario.idUsuario}" /> 
     </f:metadata>
     
     <!-- Add 50px padding top to the body for the navbar -->
     <h:body style="padding-top: 50px; padding-bottom: 20px;">
-        
-        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
-            <b:navbarLinks>
-            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
-            </b:navbarLinks>
+        <b:navBar brandHref="#" inverse="true" fixed="top">
+            <a class="navbar-brand" href="/masita/PrincipalIH.xhtml" >
+                <img id="brand-image" alt="Website Logo" src="imagenes/masita.png"/>
+            </a>
             <h:form styleClass="navbar-form navbar-right">
                 <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='#{inicioSesion.redireccionBoton()}'"/>
                 <b:dropButton value="Iniciar SesiÃƒÂ³n " look="success" rendered="#{inicioSesion.haySesion()}">
@@ -38,7 +42,6 @@
                                         <b:iconAwesome name="key"/>
                                     </f:facet>
                                 </b:inputText>
-                                <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
                                 <b:commandButton look="primary btn-block" value="Iniciar sesiÃƒÂ³n" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
                             </h:form>
                         </b:column>                       
