--- a/masita/src/main/webapp/EditarPerfilIH.xhtml
+++ b/masita/src/main/webapp/EditarPerfilIH.xhtml
@@ -13,17 +13,21 @@ and open the template in the editor.
     <h:head>
         <title>Masita</title>
     </h:head>
-   
+    <style>
+        #brand-image{
+            height: 25px;
+        }
+    </style>
     <f:metadata>
         <f:viewParam name="idUsuario" value="#{edicionPerfil.idUsuario}" /> 
     </f:metadata>
     
     <!-- Add 50px padding top to the body for the navbar -->
     <h:body style="padding-top: 50px; padding-bottom: 20px;">
-        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
-            <b:navbarLinks>
-            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
-            </b:navbarLinks>
+        <b:navBar brandHref="#" inverse="true" fixed="top">
+            <a class="navbar-brand" href="/masita/PrincipalIH.xhtml" >
+                <img id="brand-image" alt="Website Logo" src="imagenes/masita.png"/>
+            </a>
             <h:form styleClass="navbar-form navbar-right">
                 <b:button value="#{inicioSesion.mostrarBoton()}" look="warning"  onclick="location='#{inicioSesion.redireccionBoton()}'"/>
                 <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
@@ -42,7 +46,6 @@ and open the template in the editor.
                                         <b:iconAwesome name="key"/>
                                     </f:facet>
                                 </b:inputText>
-                                <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
                                 <b:commandButton look="primary btn-block" value="Iniciar sesión" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
                             </h:form>
                         </b:column>                       
@@ -82,6 +85,16 @@ and open the template in the editor.
                         <p:column style="width:60px">
                             <p:commandLink  value="editar" 
                                             actionListener="#{edicionPerfil.mandaEditar(usuario.idUsuario)}" update="form:display" oncomplete="PF('dlg').show();" />
+                        </p:column>
+                        <p:column style="width:120px">
+                            <p:commandLink value="EliminarCuenta" oncomplete="PF('dlg1').show();" actionListener="#{edicionPerfil.mandaEliminar(usuario.idUsuario)}"/>
+                            <p:dialog widgetVar="dlg1" modal="true" resizable="false" showEffect="fade" header="Confirmación" closable="false" > 
+                                <h:outputText value="¿Seguro que desea eliminar su cuenta?" />
+                                <br/><br/>
+                                <p:commandButton value="Si" oncomplete="PF('dlg1').hide();" actionListener="#{edicionPerfil.desactiva()}" rendered="#{cierreSesion.mostrarCierreSesion()}" action="#{cierreSesion.cierreSesion()}"/>
+                                <h:outputText value="     " />
+                                <p:commandButton value="No" oncomplete="PF('dlg1').hide();"/>     
+                            </p:dialog>
                         </p:column>
                     </p:dataTable>
                     
