--- a/masita/src/main/webapp/EliminarUsuarioIH.xhtml
+++ b/masita/src/main/webapp/EliminarUsuarioIH.xhtml
@@ -9,13 +9,18 @@
         <title>Masita</title>
         <meta name="author" content="The Author"></meta>
     </h:head>
+    <style>
+        #brand-image{
+            height: 25px;
+        }
+    </style>
     <!-- Add 50px padding top to the body for the navbar -->
     <h:body style="padding-top: 50px; padding-bottom: 20px;" rendered="#{inicioSesion.haySesionAdmin()}">
         
-        <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
-            <b:navbarLinks>
-            <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
-            </b:navbarLinks>
+        <b:navBar brandHref="#" inverse="true" fixed="top">
+            <a class="navbar-brand" href="/masita/PrincipalIH.xhtml" >
+                <img id="brand-image" alt="Website Logo" src="imagenes/masita.png"/>
+            </a>
             <h:form styleClass="navbar-form navbar-right">
                 <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='#{inicioSesion.redireccionBoton()}'"/>
                 <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
@@ -34,7 +39,6 @@
                                         <b:iconAwesome name="key"/>
                                     </f:facet>
                                 </b:inputText>
-                                <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
                                 <b:commandButton look="primary btn-block" value="Iniciar sesión" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
                             </h:form>
                         </b:column>                       
@@ -47,10 +51,10 @@
         <b:jumbotron>
             <b:container>
                 <p:link outcome="PerfilAdministradorIH" value="Regresar al Perfil" style="font-size:120%"/>
-                <h3>Desactivar Usuarios</h3>
-                <p>Recuerda que sólo desactivamos a los usuarios para tener un registro de los mismos.</p>
-                <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Activar</p>
-                <p><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Desactivar</p>
+                <h3>Eliminar Usuarios</h3>
+                <p>Recuerda que si eliminas un usuario ya no se recuperará su información.</p>
+                <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Cancelar</p>
+                <p><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Eliminar</p>
             </b:container>
             
         </b:jumbotron>
@@ -88,7 +92,7 @@
                             <p:commandLink value="Hacer Admin"  actionListener="#{editarUsuario.mandaAdmin(c.idUsuario)}" oncomplete="PF('dlg1').show();"/>
                         </p:column>
 
-                        <p:column style="width:100px" headerText="Activar / Desactivar">
+                        <p:column style="width:100px" headerText="Eliminar">
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable>
