--- a/masita/src/main/webapp/mapa.xhtml
+++ b/masita/src/main/webapp/mapa.xhtml
@@ -6,21 +6,26 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:b="http://bootsfaces.net/ui"
       >
-
   <h:head>
     <title>Ejemplo de google maps y PrimeFaces</title>
     <meta name="author" content="Miguel Piña"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8"/>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyBlEYhBfp104jOYDy-TOhTYkSd8YBtkLFI" type="text/javascript"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyD6Op8UEg9VEX_Oj0eNWNkCEJjr3oVu3WY" type="text/javascript"></script>
   </h:head>
-
-  <h:body>
-      
-      <b:navBar brand="Masita" brandHref="#" inverse="true" fixed="top">
-            <b:navbarLinks>
+    <style>
+        #brand-image{
+            height: 25px;
+        }
+    </style>
+  <h:body>      
+      <b:navBar brandHref="#" inverse="true" fixed="top">
+            <a class="navbar-brand" href="/masita/PrincipalIH.xhtml" >
+                <img id="brand-image" alt="Website Logo" src="imagenes/masita.png"/>
+            </a>
+            <!--<b:navbarLinks>
             <b:navLink value="Inicio" href="/masita/PrincipalIH.xhtml" style="" ></b:navLink>
-            </b:navbarLinks>
+            </b:navbarLinks>-->
           <h:form styleClass="navbar-form navbar-right">
               <b:button value="#{inicioSesion.mostrarBoton()}" look="warning" onclick="location='#{inicioSesion.redireccionBoton()}'"/>
               <b:dropButton value="Iniciar Sesión " look="success" rendered="#{inicioSesion.haySesion()}">
@@ -39,7 +44,6 @@
                                       <b:iconAwesome name="key"/>
                                   </f:facet>
                               </b:inputText>
-                              <b:selectBooleanCheckbox value="true" caption="Recordarme"/>
                               <b:commandButton look="primary btn-block" value="Iniciar sesión" icon="log-in" size="lg" action="#{inicioSesion.inicioSesion()}"/>
                           </h:form>
                       </b:column>                       
